--- a/css/styles.css
+++ b/css/styles.css
@@ -201,9 +201,19 @@ header .container {
 }
 
 .nav-svjaz-convert {
-  fill: currentColor;
+  fill: var(--primary-text-color);
   width: 16px;
   height: 12px;
+  margin-right: 10px;
+
+  id="icon-convert"viewBox="0 0 32 32"><path "d="M29 4H3C1.346 4 0 5.346 0 7v18c0 1.654 1.346 3 3 3h26c1.654 0 3-1.346 3-3V7c0-1.654-1.346-3-3-3zm0 2c.136 0 .266.028.384.078L16 17.678 2.616 6.078A.971.971 0 013 6h26zm0 20H3a1 1 0 01-1-1V8.19l13.344 11.566a.997.997 0 001.313-.001l-.001.001L30 8.19V25a1 1 0 01-1 1z"/></id=>
+
+}
+
+.nav-svjaz-phone {
+  fill: currentColor;
+  width: 10px;
+  height: 16px;
   margin-right: 10px;
 }
 
@@ -225,13 +235,23 @@ p {
 /* Cтилизация секции герой */
 
 .geroj {
-  display: flex;
-  writing-mode: 100%;
+  /*height: 600px;*/
   min-height: 600px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  align-items: center;
+  outline: 1px solid black;
+  max-width: 1600px;
+  margin: 0 auto;
+  /*margin-left: auto;
+  margin-top: auto;*/
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--secondary-sov-color);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/geroj.jpg);
+  /*background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/geroj.jpg);*/
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .geroj-content {
