--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,11 @@
   /*размер коробки: рамка-рамка;*/
 }
 
-
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
 
 body {
   font-family: Roboto, sans-serif;
@@ -215,14 +219,29 @@ header .container {
   width: 16px;
   height: 12px;
   margin-right: 10px;
+  margin-top: 15px;
 
 }
 
 .nav-svjaz-phone {
-  fill: currentColor;
+  fill: var(--primary-text-color);
   width: 10px;
   height: 16px;
+  margin-top: 12px;
   margin-right: 10px;
+  margin-top: 15px;
+}
+
+.nav-svjaz-convert {
+  background: url('./images/sprit.svg');
+  background-size: 100%;
+  width: 16px;
+  height: 12px;
+}
+
+.nav-svjaz-convert:hover {
+  background-position: 0 25px;
+  color: var(--accent-color);
 }
 
 /*Cтилизация страницы студия*/
@@ -529,6 +548,10 @@ p {
   background-color: var(--secondary-sov-color);
 }
 
+.bottom .container {
+  display: flex;
+}
+
 .bottom-svjaz {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
@@ -541,8 +564,8 @@ p {
 }
 
 .bottom-cell {
-  margin-top: 72px;
-  margin-bottom: 100 px;
+  margin-top: 60px;
+  margin-bottom: 60 px;
   width: 270px;
 
 }
@@ -568,7 +591,7 @@ bottom-svjaz a {
 }
 
 .bottom-cozseti {
-  display: inline-block;
+  display: block;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.14;
@@ -595,8 +618,8 @@ bottom-svjaz a {
 
 .bottom-prisoedenajtes {
   font-weight: 700;
-  display: inline-block;
-  margin-bottom: 20px;
+  display: block;
+  margin-bottom: 80px;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -666,7 +689,7 @@ header {
 /* Стилизация раздела наши проекты */
 
 .projeckt {
-  display: flex;
+  display: inline-block;
   flex-wrap: wrap;
   /* margin: -15px;*/
   list-style: none;
